--- a/index.html
+++ b/index.html
@@ -5,24 +5,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Online Food Delivery Service in India</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Css\style.css">
+    <link rel="stylesheet" media="screen and (max-width:670px)"href="Css\phone.css">
 </head>
 
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="logo.png" alt="MyOnlinMeal.com">
+            <img src="Css\logo.png" alt="MyOnlinMeal.com">
         </div>
         <ul>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">About Us</a></li>
-            <li class="item"><a href="#">Services</a></li>
-            <li class="item"><a href="#">Contact Us</a></li>
+            <li class="item"><a href="#home">Home</a></li>
+            <li class="item"><a href="#client-section">Our clients</a></li>
+            <li class="item"><a href="#services-container">Services</a></li>
+            <li class="item"><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
+    <section id="home">
+        <h1 class="h-primary">Welcome to MyOnlineMeal</h1>
+        <p>Lorem ipsum, dolor sit consectetur adipisicing elit. Iusto rem libero iste, ratione, quia minima
+            officiis quis</p>
+        <p>Lorem ipsum, elit. Iusto rem libero iste, ratione, quia minima
+            officiis quis</p>
+        <button class="btn">Order Now</button>
+    </section>
+    <section id="services-container">
+        <h1 class="h-primary center">Our Services</h1>
+        <div id="services">
+        <div class="box">
+            <img src="Css\img\img1.png" alt="">
+            <h2 class="h-secondary center">Food Ordering</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur ipsum aliquid tenetur dolorem.
+                possimus tempora beatae saepe mollitia aperiam itaque aut quo hic.
+                Rerum magni quo illo expedita voluptate.</p>
+        </div>
+        <div class="box">
+            <img src="Css\img\img2.jpeg" alt="">
+            <h2 class="h-secondary center">Food Catering</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur ipsum aliquid tenetur dolorem.
+                possimus tempora beatae saepe mollitia aperiam itaque aut quo hic.
+                Rerum magni quo illo expedita voluptate.</p>
+        </div>
+        <div class="box">
+            <img src="Css\img\img3.png" alt="">
+            <h2 class="h-secondary center">Bulk Ordering</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur ipsum aliquid tenetur dolorem.
+                possimus tempora beatae saepe mollitia aperiam itaque aut quo hic.
+                Rerum magni quo illo expedita voluptate.</p>
+        </div>
+        </div>
+    </section>
+    <hr>
+    <section id="client-section">
+        <h1 class="h-primary center">Our Clients</h1>
+        <div id="clients">
+            <div class="client-items">
+                <img src="Css\img\logo1.png" alt="">
+            </div>
+            <div class="client-items">
+                <img src="Css\img\logo2.png" alt="">
+            </div>
+            <div class="client-items">
+                <img src="Css\img\logo3.png" alt="">
+            </div>
+            <div class="client-items">
+                <img src="Css\img\logo4.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <h1 class="h-primary center">Contact Us</h1>
+        <div id="contact-box">
+            <form action="">
+                <div class="form-group">
+                   <label for="name">Name:</label> 
+                   <input type="text" name="name" id="name" placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="myEmail">Email:</label> 
+                    <input type="email" name="myEmail" id="myEmail" placeholder="Enter your Email">
+                 </div>
+                 <div class="form-group">
+                    <label for="myPhone">Phone Number:</label> 
+                    <input type="phone" name="myPhone" id="myPhone" placeholder="Enter your Phone number">
+                 </div>
+                 <div class="form-group">
+                    <label for="message">Feedback</label> 
+                    <textarea name="message" id="message" rows="10" cols="30"></textarea>
+                 </div>
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="center">
+            Copyright &copy; www.myOnlineMeal.com All rights reserved!
+        </div>
+    </footer>
 </body>
 
 </html>
